chore: deploy prep  use railway DB, add netlify.toml and deploy docs

--- a/server/.env.example
+++ b/server/.env.example
@@ -9,3 +9,7 @@ DB_PASSWORD=your_password
 DB_NAME=retro_gaming
 # Allow specific origins separated by comma. Localhost any port is always allowed by code.
 CORS_ORIGIN=http://localhost:3000,http://localhost:5173
+# Optional: provide a single full connection URL instead of individual DB_* vars.
+# Examples (Railway provides a MYSQL_PUBLIC_URL):
+# MYSQL_PUBLIC_URL=mysql://user:password@host:port/database
+# You can also set DATABASE_URL or MYSQL_URL and the server will use them.
